2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-tab.y: Do not try to pop lexical frames in <ast>
	destructors.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_cast): Casting to/from void is
	not allowed.
	* testsuite/poke.pkl/cast-void-diag-1.pk: New test.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_first_operand): Check the type
	of the operand for NEG, POS and BNOT.
	* testsuite/poke.pkl/neg-diag-1.pk: New test.
	* testsuite/poke.pkl/bnot-diag-1.pk: Likewise.
	* testsuite/poke.pkl/pos-diag-1.pk: Likewise.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-insn.def (PKL_INSN_OSETM): Define.
	* src/pvm.jitter (osetm): new instruction.
	* src/pkl-gen.c (pkl_gen_ps_op_intexp): Adapt to offsets.
	* src/pkl-asm.c (pkl_asm_insn_intop): Likewise.
	* testsuite/poke.pkl/neg-offsets-1.pk: New test.
	* testsuite/poke.pkl/bnot-offsets-1.pk: Likewise.
	* testsuite/poke.pkl/bnot-integers-1.pk: Renamed from bnot-1.pk
	* testsuite/poke.pkl/bnot-integers-2.pk: Likewise.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_cast): Check casts from arrays.
	* testsuite/poke.pkl/cast-array-diag-8.pk: New file.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_cdiv): Fix detection of division by zero
	for offsets with implicit magnitudes.
	(pkl_fold_div): Likewise.
	* testsuite/poke.pkl/cdiv-offsets-3.pk: New file.
	* testsuite/poke.pkl/div-offsets-4.pk: Likewise.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_mod): Fix detection of division by zero
	for offsets with implicit magnitudes.
	* testsuite/poke.pkl/mod-offsets-5.pk: New file.

2020-01-13  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-anal.c (pkl_anal1_ps_offset): New handler.
	(pkl_phase_anal1): Add handler.
	* testsuite/poke.pkl/offset-type-diag-3.pk: New test.
	* testsuite/poke.pkl/offsets-diag-2.pk: Likewise.