@@ -1,0 +1,3 @@
+/* { dg-do compile } */
+
+defvar a = 929991111111 ^ "foo"; /* { dg-error "" } */
